# eflips-x

./: .gitignore  .mailmap  .test_durations  00_bvg_schedule_input.sql.zst  01_import_and_reduce.py  01b_more_station_merging.py  02_triplify_scenario.py  02b_verify_scenario.py  02c_three_scenario_db.sql.zst  03a_vehicle_type_and_depot_plot.pkl  03a_vehicle_type_and_depot_plot.py  03a_vehicle_type_and_depot_plot.xlsx  03b_consumption_table.py  03c_create_consumption_table.py  03d_add_temperatures.py  03e_total_deadhead_km.py  04_temperatures.xlsx  04_trip_consumption_simulation.py  04b_with_lut.sql.zst  05_scheduling.py  05b_scheduling_done.sql.zst  06_depot_assignment.py  06b_depot_assignment_done.sql.zst  06c_vehicle_type_and_depot_plot.py  08a_is_station_electrification_possible.py  08b_do_station_electrification.py  08b_first_electrification_stage_done.sql.zst  08b_station_electrification_log.xlsx  08c_postprocess_term_scenario.py  08c_station_placement_done.sql.zst  09_rotation_info.xlsx  09_schedule_evaluation.py  10_run_simulation.py  10_simulation_done.sql.zst  11_analyze.py  11_results_by_scenario.xlsx  12_interactive_map.py  13_other_html.py  14_results_by_scenario_and_depot.py  14_results_by_scenario_and_depot.xlsx  (+42 more)
.github/workflows/: check-documentation-build.yml  check-documentation-version.yml  lint.yml  poetry-check.yml  unittests.yml
data/TCO/: berlin.py  berlin_literature.json  berlin_literature.py  berlin_literature_diesel.json  lca.json  tco.json  tco_copy.json  tco_transition.json
data/TCO/sensitivity_analysis/: tco_base.json  tco_bat_180.json  tco_bat_200.json  tco_bat_e_006.json  tco_bat_e_009.json  tco_d_120.json  tco_d_140.json  tco_d_160.json  tco_d_180.json
data/cache/: route_cache.json  snap_cache.json
data/input/Berlin 2025-06/: README.md
data/input/Berlin Testing/: Linienfahrplan_10_22.06.2025_968_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_969_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_970_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_977_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_981_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_984_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_988_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_991_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_994_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_995_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_996_0_N_N.response.xml  Linienfahrplan_10_22.06.2025_997_0_N_N.response.xml
data/input/GTFS/: depot_locations.xlsx
data/input/consumption_luts/: 10m_consumption_lle_99.csv  12m_consumption_nor_bus.csv  18m_consumption_solaris_18m.csv  6m_consumption_sprinter_6m.csv
data/input/impact/: fleet.json  lca_overrides.json  tco.json
data/transition_plan/: energy_escalation.py  energy_prices.csv  price_summary.csv  transition_plan_config.py
doc/: conf.py  index.rst
eflips/: db_util.py  main.py
eflips/x/: steps.py  util.py  util_depot_assignment.py  util_legacy.py  util_tco_calculation.py
eflips/x/flows/: __init__.py  analysis_flow.py  benchmark.py  benchmark_analysis.py  bvg.py  bvg_brazil.py  bvg_ou.py  example.py  gtfs_flow.py  impact_flow.py  izmir.py  izmir2.py  izmir_one_day.py  izmir_reduced_lines.py  potsdam_depot_gtfs_flow.py  potsdam_opportunity_gtfs_flow.py  swu_flow.py  swu_gtfs_flow.py  swu_sensitivity.py  util_station_electrification.py
eflips/x/framework/: __init__.py
scripts/: migrate_geometry_to_3d.py
tests/: __init__.py  conftest.py  test_prefect_flow.py  util.py
tests/steps/: __init__.py  conftest.py
(+34 files in other folders)
