[project]
name = "eflips-x"
version = "0.1.0"
description = "Workflow Orchestrator for Running [eFLIPS](https://github.com/stars/ludgerheide/lists/ebus2030)  electric city bus network simulations."
authors = [
    {name = "Ludger Heide",email = "ludger.heide@tu-berlin.de"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "eflips-model",
    "eflips-depot",
    "eflips-ingest",
    "eflips-eval",
    "eflips-opt",
    "eflips-tco @ git+https://github.com/mpm-tu-berlin/eflips-tco.git@main",
    "prefect[dask,sqlalchemy] (>=3.4.6,<4.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
pandas-stubs = "^2.3.2.250827"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99