[tool.poetry]
name = "eflips-x"
version = "0.1.0"
description = "Sample Scripts for the eFLIPS book"
authors = ["Ludger Heide <ludger.heide@tu-berlin.de>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
eflips-depot = "*"
eflips-ingest = ">=1.2.4"
eflips-model = ">=10.0.2, <13.0.0"
eflips-opt = ">=0.1.9"
eflips-eval = ">=1.7.1"
eflips-tco = { git = "git+https://github.com/mpm-tu-berlin/eflips-tco.git@main" }
eflips-schedule-rust = "^2.0.3"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
networkx = "^3.3"
graphviz = "^0.20.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
